// Root build.gradle
plugins {
    id 'java'
    id 'org.springframework.boot'   version '3.3.0' apply false
    id 'io.spring.dependency-management' version '1.1.5' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    group   = 'com.oms'
    version = '1.0.0-SNAPSHOT'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    repositories {
        mavenCentral()
        maven { url 'https://repo.spring.io/milestone' }

    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.3.0"
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1"
            mavenBom "org.springframework.ai:spring-ai-bom:1.1.4"
        }
    }

    dependencies {
        compileOnly    'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    test { useJUnitPlatform() }
    compileJava.options.encoding   = 'UTF-8'
}
